--- a/index.html
+++ b/index.html
@@ -18,17 +18,125 @@
 		{
 		window.open("zadanie2_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
 		}
+	    function WinOpen_duleba3()
+		{
+		window.open("zadanie3.html","okienko","toolbar=no,directories=no,menubar=no,height=300,width=600,top=350,left=740");
+		}
+		function WinOpen_duleba4()
+		{
+		window.open("zadanie4.html","okienko","toolbar=no,directories=no,menubar=no,height=300,width=600,top=350,left=740");
+		}
+		function WinOpen_duleba5()
+		{
+		window.open("zadanie5.html","okienko","toolbar=no,directories=no,menubar=no,height=300,width=600,top=350,left=740");
+		}
+		function WinOpen_duleba6()
+		{
+		window.open("zadanie6.html","okienko","toolbar=no,directories=no,menubar=no,height=300,width=600,top=350,left=740");
+		}
+		function WinOpen_duleba7()
+		{
+		window.open("zadanie7.html","okienko","toolbar=no,directories=no,menubar=no,height=300,width=600,top=350,left=740");
+		}
+	    function WinOpen_duleba8()
+		{
+		window.open("zadanie8.html","okienko","toolbar=no,directories=no,menubar=no,height=300,width=600,top=350,left=740");
+		}
+		function WinOpen_duleba8kod()
+		{
+		window.open("zadanie8_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba9()
+		{
+		window.open("zadanie9.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba9kod()
+		{
+		window.open("zadanie9_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba10()
+		{
+		window.open("zadanie10.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba10kod()
+		{
+		window.open("zadanie10_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba11()
+		{
+		window.open("zadanie11.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba11kod()
+		{
+		window.open("zadanie11_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba12()
+		{
+		window.open("zadanie12.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba12kod()
+		{
+		window.open("zadanie12_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba13()
+		{
+		window.open("zadanie13.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba13kod()
+		{
+		window.open("zadanie13_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba13a()
+		{
+		window.open("zadanie13_a.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba13akod()
+		{
+		window.open("zadanie13_a_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
 		</script>
 	</head>
 	
 	<body>
 	<center><p style="font-size: 2cm">Maksymilian Dulęba </p></center>
 		<form>
-		<input type="button" name="przycisk" value="Zadanie 1 Działanie" onclick="WinOpen_duleba('')">
-		<input type="button" name="przycisk" value="Zadanie 1 Kod" 		 onclick="WinOpen_dulebakod('')"> 
+		<input type="button" name="przycisk" value="Zadanie 1" onclick="WinOpen_duleba('')">
+		<input type="button" name="przycisk" value="Zadanie 1 Kod" onclick="WinOpen_dulebakod('')"> 
 		<br>
-		<input type="button" name="przycisk" value="Zadanie 2 Działanie" onclick="WinOpen_duleba2('')">
-		<input type="button" name="przycisk" value="Zadanie 2 Kod" 		 onclick="WinOpen_duleba2kod('')">
+		<input type="button" name="przycisk" value="Zadanie 2" onclick="WinOpen_duleba2('')">
+		<input type="button" name="przycisk" value="Zadanie 2 Kod" onclick="WinOpen_duleba2kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 3" onclick="WinOpen_duleba3('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 4" onclick="WinOpen_duleba4('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 5" onclick="WinOpen_duleba5('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 6" onclick="WinOpen_duleba6('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 7" onclick="WinOpen_duleba7('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 8" onclick="WinOpen_duleba8('')">
+		<input type="button" name="przycisk" value="Zadanie 8 Kod" onclick="WinOpen_duleba8kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 9" onclick="WinOpen_duleba9('')">
+		<input type="button" name="przycisk" value="Zadanie 9 Kod" onclick="WinOpen_duleba9kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 10" onclick="WinOpen_duleba10('')">
+		<input type="button" name="przycisk" value="Zadanie 10 Kod" onclick="WinOpen_duleba10kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 11" onclick="WinOpen_duleba11('')">
+		<input type="button" name="przycisk" value="Zadanie 11 Kod" onclick="WinOpen_duleba11kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 12" onclick="WinOpen_duleba11('')">
+		<input type="button" name="przycisk" value="Zadanie 12 Kod" onclick="WinOpen_duleba11kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 13" onclick="WinOpen_duleba13('')">
+		<input type="button" name="przycisk" value="Zadanie 13 Kod" onclick="WinOpen_duleba13kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 13 a" onclick="WinOpen_duleba13a('')">
+		<input type="button" name="przycisk" value="Zadanie 13 a Kod" onclick="WinOpen_duleba13akod('')">
+		<br>
 		</form>
 	</body>
 </html>
