--- a/index.html
+++ b/index.html
@@ -94,6 +94,134 @@
 		{
 		window.open("zadanie13_a_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
 		}
+		function WinOpen_duleba62()
+		{
+		window.open("zadanie62_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba62kod()
+		{
+		window.open("zadanie62_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba63()
+		{
+		window.open("zadanie63_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba63kod()
+		{
+		window.open("zadanie63_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba64()
+		{
+		window.open("zadanie64_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba64kod()
+		{
+		window.open("zadanie64_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba65()
+		{
+		window.open("zadanie65_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba65kod()
+		{
+		window.open("zadanie65_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba66()
+		{
+		window.open("zadanie66_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba66kod()
+		{
+		window.open("zadanie66_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba67()
+		{
+		window.open("zadanie67_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba67kod()
+		{
+		window.open("zadanie67_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba68()
+		{
+		window.open("zadanie68_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba68kod()
+		{
+		window.open("zadanie68_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba69()
+		{
+		window.open("zadanie69_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba69kod()
+		{
+		window.open("zadanie69_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba70()
+		{
+		window.open("zadanie70_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba70kod()
+		{
+		window.open("zadanie70_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba71()
+		{
+		window.open("zadanie71_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba71kod()
+		{
+		window.open("zadanie71_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba72()
+		{
+		window.open("zadanie72_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba72kod()
+		{
+		window.open("zadanie72_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba73()
+		{
+		window.open("zadanie73_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba73kod()
+		{
+		window.open("zadanie73_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+		}
+		function WinOpen_duleba74()
+			{
+			window.open("zadanie74_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+			}
+			function WinOpen_duleba74kod()
+			{
+			window.open("zadanie74_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+			}
+			function WinOpen_duleba75()
+			{
+			window.open("zadanie75_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+			}
+			function WinOpen_duleba75kod()
+			{
+			window.open("zadanie75_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+			}
+			function WinOpen_duleba76()
+			{
+			window.open("zadanie76_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+			}
+			function WinOpen_duleba76kod()
+			{
+			window.open("zadanie76_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+			}
+			function WinOpen_duleba77()
+			{
+			window.open("zadanie77_dule.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+			}
+			function WinOpen_duleba77kod()
+			{
+			window.open("zadanie77_dule_kod.html","_blank","okienko","toolbar=no,directories=no,menubar=no");
+			}
 		</script>
 	</head>
 	
@@ -128,14 +256,62 @@
 		<input type="button" name="przycisk" value="Zadanie 11" onclick="WinOpen_duleba11('')">
 		<input type="button" name="przycisk" value="Zadanie 11 Kod" onclick="WinOpen_duleba11kod('')">
 		<br>
-		<input type="button" name="przycisk" value="Zadanie 12" onclick="WinOpen_duleba11('')">
-		<input type="button" name="przycisk" value="Zadanie 12 Kod" onclick="WinOpen_duleba11kod('')">
+		<input type="button" name="przycisk" value="Zadanie 12" onclick="WinOpen_duleba12('')">
+		<input type="button" name="przycisk" value="Zadanie 12 Kod" onclick="WinOpen_duleba12kod('')">
 		<br>
 		<input type="button" name="przycisk" value="Zadanie 13" onclick="WinOpen_duleba13('')">
 		<input type="button" name="przycisk" value="Zadanie 13 Kod" onclick="WinOpen_duleba13kod('')">
 		<br>
 		<input type="button" name="przycisk" value="Zadanie 13 a" onclick="WinOpen_duleba13a('')">
 		<input type="button" name="przycisk" value="Zadanie 13 a Kod" onclick="WinOpen_duleba13akod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 62" onclick="WinOpen_duleba62('')">
+		<input type="button" name="przycisk" value="Zadanie 62 Kod" onclick="WinOpen_duleba62kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 63" onclick="WinOpen_duleba63('')">
+		<input type="button" name="przycisk" value="Zadanie 63 Kod" onclick="WinOpen_duleba63kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 64" onclick="WinOpen_duleba64('')">
+		<input type="button" name="przycisk" value="Zadanie 64 Kod" onclick="WinOpen_duleba64kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 65" onclick="WinOpen_duleba65('')">
+		<input type="button" name="przycisk" value="Zadanie 65 Kod" onclick="WinOpen_duleba65kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 66" onclick="WinOpen_duleba66('')">
+		<input type="button" name="przycisk" value="Zadanie 66 Kod" onclick="WinOpen_duleba66kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 67" onclick="WinOpen_duleba67('')">
+		<input type="button" name="przycisk" value="Zadanie 67 Kod" onclick="WinOpen_duleba67kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 68" onclick="WinOpen_duleba68('')">
+		<input type="button" name="przycisk" value="Zadanie 68 Kod" onclick="WinOpen_duleba68kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 69" onclick="WinOpen_duleba69('')">
+		<input type="button" name="przycisk" value="Zadanie 69 Kod" onclick="WinOpen_duleba69kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 70" onclick="WinOpen_duleba70('')">
+		<input type="button" name="przycisk" value="Zadanie 70 Kod" onclick="WinOpen_duleba70kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 71" onclick="WinOpen_duleba71('')">
+		<input type="button" name="przycisk" value="Zadanie 71 Kod" onclick="WinOpen_duleba71kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 72" onclick="WinOpen_duleba72('')">
+		<input type="button" name="przycisk" value="Zadanie 72 Kod" onclick="WinOpen_duleba72kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 73" onclick="WinOpen_duleba73('')">
+		<input type="button" name="przycisk" value="Zadanie 73 Kod" onclick="WinOpen_duleba73kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 74" onclick="WinOpen_duleba74('')">
+		<input type="button" name="przycisk" value="Zadanie 74 Kod" onclick="WinOpen_duleba74kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 75" onclick="WinOpen_duleba75('')">
+		<input type="button" name="przycisk" value="Zadanie 75 Kod" onclick="WinOpen_duleba75kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 76" onclick="WinOpen_duleba76('')">
+		<input type="button" name="przycisk" value="Zadanie 76 Kod" onclick="WinOpen_duleba76kod('')">
+		<br>
+		<input type="button" name="przycisk" value="Zadanie 77" onclick="WinOpen_duleba77('')">
+		<input type="button" name="przycisk" value="Zadanie 77 Kod" onclick="WinOpen_duleba77kod('')">
 		<br>
 		</form>
 	</body>
